--- a/app/src/main/res/layout/content_item.xml
+++ b/app/src/main/res/layout/content_item.xml
@@ -3,5 +3,5 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:gravity="center"
-    android:maxLines="2"
+    android:singleLine="true"
     android:textSize="42sp"/>
